[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/RoundTimer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/GameHandler.gd" type="Script" id=3]
[ext_resource path="res://organicpencil.splitscreen/splitscreen.tscn" type="PackedScene" id=4]

[node name="GameHandler" type="Node"]
script = ExtResource( 3 )

[node name="Menu" parent="." instance=ExtResource( 2 )]

[node name="Splitscreen" parent="." instance=ExtResource( 4 )]

[node name="RoundTimer" parent="." instance=ExtResource( 1 )]

[connection signal="game_started" from="Menu" to="." method="_on_Menu_game_started"]
